@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,9 +27,11 @@ import static jdk.test.lib.Asserts.assertTrue;
 
 import java.time.Duration;
 import java.util.List;
+import java.util.concurrent.ThreadFactory;
 
 import jdk.jfr.Recording;
 import jdk.jfr.consumer.RecordedEvent;
+import jdk.test.lib.Asserts;
 import jdk.test.lib.jfr.EventNames;
 import jdk.test.lib.jfr.Events;
 
@@ -38,7 +40,8 @@ import jdk.test.lib.jfr.Events;
  * @key jfr
  * @requires vm.hasJFR
  * @library /test/lib
- * @run main/othervm jdk.jfr.event.runtime.TestThreadSleepEvent
+ * @compile --enable-preview -source ${jdk.version} TestThreadSleepEvent.java
+ * @run main/othervm --enable-preview jdk.jfr.event.runtime.TestThreadSleepEvent
  */
 public class TestThreadSleepEvent {
 
@@ -49,22 +52,37 @@ public class TestThreadSleepEvent {
     private final static Long SLEEP_TIME_MS = new Long(47);
 
     public static void main(String[] args) throws Throwable {
-        Recording recording = new Recording();
-        recording.enable(EVENT_NAME).withThreshold(Duration.ofMillis(0));
-        recording.start();
-        Thread.sleep(SLEEP_TIME_MS);
-        recording.stop();
 
-        List<RecordedEvent> events = Events.fromRecording(recording);
-        boolean isAnyFound = false;
-        for (RecordedEvent event : events) {
-            if (event.getThread().getJavaThreadId() == Thread.currentThread().getId()) {
-                System.out.println("Event:" + event);
-                isAnyFound = true;
-                Events.assertField(event, "time").equal(SLEEP_TIME_MS);
+        try (Recording recording = new Recording()) {
+            recording.enable(EVENT_NAME).withoutThreshold().withStackTrace();
+            recording.start();
+            Thread.sleep(SLEEP_TIME_MS);
+            Thread virtualThread  = Thread.ofVirtual().start(() -> {
+                try {
+                    Thread.sleep(SLEEP_TIME_MS);
+                } catch (InterruptedException ie) {
+                    throw new RuntimeException(ie);
+                }
+            });
+            virtualThread.join();
+            recording.stop();
+
+            int threadCount = 2;
+            List<RecordedEvent> events = Events.fromRecording(recording);
+            Asserts.assertEquals(events.size(), threadCount);
+            for (RecordedEvent event : events) {
+                System.out.println(event);
+                System.out.println(event.getStackTrace());
+                if (event.getThread().getJavaThreadId() == Thread.currentThread().getId()) {
+                    threadCount--;
+                    Events.assertDuration(event, "time", Duration.ofMillis(SLEEP_TIME_MS));
+                }
+                if (event.getThread().getJavaThreadId() == virtualThread.getId()) {
+                    threadCount--;
+                    Events.assertDuration(event, "time", Duration.ofMillis(SLEEP_TIME_MS));
+                }
             }
+            Asserts.assertEquals(threadCount, 0, "Could not find all expected events");
         }
-        assertTrue(isAnyFound, "No matching events found");
     }
-
 }
